[package]
name = "laminator"
version = "0.1.0"
authors = ["Antti Keränen <detegr@rbx.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtensa-lx-rt = { version = "0.5.0", features = ["lx6"] }
xtensa-lx = { version = "0.3.0", features = ["lx6"] }
panic-halt = "0.2.0"
esp32-hal = "0.2.0"
